debugページにクラス追加を追加

--- a/pages/dev/index.html
+++ b/pages/dev/index.html
@@ -11,11 +11,10 @@
 </head>
 
 <body>
-    <div class="main-content">        
-        <h1>Welcome!</h1>
-        <p>このソフトウェアは出席簿管理ソフトです。</p>
+    <div class="main-content">
+        <h1>Debug Page</h1>
         <br>
-        <a href="/dev/">debug</a>
+        <a href="/dev/database/">database</a>
     </div>
 </body>
 
