--- a/pages/dev/database/index.html
+++ b/pages/dev/database/index.html
@@ -31,11 +31,11 @@
         
         <h3>Students</h3>
         <div>
-            name:<input type="text">
-            number:<input type="number" value="1" min="1" max="1000">
-            class:<select name="input-student-class" id="input-student-class"></select>
+            name:<input type="text" id="student-name">
+            number:<input type="number" value="1" min="1" id="student-number">
+            class:<select name="student-class" id="student-class"></select>
         </div>
-        <button>submit</button>
+        <button id="add-student-button">submit</button>
 
     </div>
     
