--- a/pages/dev/database/index.html
+++ b/pages/dev/database/index.html
@@ -37,6 +37,15 @@
         </div>
         <button id="add-student-button">submit</button>
 
+        <h3>Attend</h3>
+        <div>
+            student:<select name="attend-student" id="attent-student"></select>
+            date:<input type="date" name="sttend-date" id="attend-date">
+            time: <select name="attend-time" id="attend-time">
+                <option value=""></option>
+            </select>
+        </div>
+
     </div>
     
     
