ページ構成の整備

--- a/pages/app/login/index.html
+++ b/pages/app/login/index.html
@@ -7,17 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheese gyudon</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./main.js" defer></script>
+
 </head>
 
 <body>
-    <div class="main-content">        
-        <h1>Welcome!</h1>
-        <p>このソフトウェアは出席簿管理ソフトです。</p>
+    <div class="main-content">
+        User ID<input type="text">
         <br>
-        <a href="/dev/">debug</a>
-        <a href="/app/login/">login</a>
+        password<input type="password">
+        <br>
+        <button id="login-button">login</button>
     </div>
+
+
+    <script src="./main.js"></script>
 </body>
 
 </html>
