--- a/pages/app/mypage/aggregate/index.html
+++ b/pages/app/mypage/aggregate/index.html
@@ -7,17 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheese gyudon</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./main.js" defer></script>
+
 </head>
 
 <body>
-    <div class="main-content">        
-        <h1>Welcome!</h1>
-        <p>このソフトウェアは出席簿管理ソフトです。</p>
-        <br>
-        <a href="/dev/">debug</a>
-        <a href="/app/login/">login</a>
+    <div class="main-content" style="display: flex;">
     </div>
+
+
+    <script src="./main.js"></script>
 </body>
 
 </html>
