--- a/pages/dev/database/index.html
+++ b/pages/dev/database/index.html
@@ -40,7 +40,7 @@
         <h3>Attend</h3>
         <div>
             class:<select name="attend-class" id="attend-class"></select>
-            student:<select name="attend-student" id="attent-student"></select>
+            student:<select name="attend-student" id="attend-student"></select>
             date:<input type="date" name="sttend-date" id="attend-date">
             time: <select name="attend-time" id="attend-time">
                 <option value="0">HL</option>
