--- a/pages/app/mypage/aggregate/index.html
+++ b/pages/app/mypage/aggregate/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <div class="main-content" style="display: flex;">
+    <div class="main-content">
+        
     </div>
 
 
