構想図通りにしたおbyかなりえずき

--- a/pages/app/mypage/aggregate/index.html
+++ b/pages/app/mypage/aggregate/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <div class="main-content" style="display: flex;">
+    <div class="main-content">
+        <a href="/index.html"><img src="/img/toppage.png" alt="トップページへ"></a>
     </div>
 
 
