--- a/pages/app/mypage/index.html
+++ b/pages/app/mypage/index.html
@@ -11,10 +11,12 @@
 </head>
 
 <body>
-    <div class="main-content" style="display: flex;">
-        <button id="input-button">入力</button>
+    <div class="main-content">
+        <img src="/img/title.png" 　title="タイトル">
+        <br>
+        <a href="./input/index.html"><img src="/img/in.png" alt="出席簿"></a>
         <div style="width: 100px; height: 10px;"></div>
-        <button id="aggregate-button">出力</button>
+        <a href="./aggregate/index.html"><img src="/img/syukei.png" alt="集計"></a>
     </div>
 
 
