--- a/pages/app/mypage/input/index.html
+++ b/pages/app/mypage/input/index.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
-    <div class="main-content" style="display: flex;">
+    <div class="main-content">
+        <img src="/img/title.png" 　title="タイトル">
+        <p>出席簿入力</p>
+        <a href="/index.html"><img src="/img/toppage.png" alt="トップページへ"></a>
         
     </div>
 
