--- a/pages/index.html
+++ b/pages/index.html
@@ -12,11 +12,10 @@
 
 <body>
     <div class="main-content">        
-        <h1>Welcome!</h1>
-        <p>このソフトウェアは出席簿管理ソフトです。</p>
+        <img src="./img/title.png" 　title="タイトル">
+        <a href="./app/login/index.html"><img src="./img/botton.png" alt="次へ"></a>
         <br>
         <a href="/dev/">debug</a>
-        <a href="/app/login/">login</a>
     </div>
 </body>
 
