トップページかっこよくした

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,12 +11,46 @@
 </head>
 
 <body>
-    <div class="main-content">        
+    <header>
+        <h1 class="title">
+            <span class="color-1">3色</span>
+            <span class="color-2">チーズ</span>
+            <span class="color-1">牛丼</span>
+            <span class="color-1">出席簿管理システム</span>
+        </h1>
+    </header>
+    <main>
+        <div class="grid-conteiner">
+            <div class="content-title">
+                <h1 class="color-1">
+                    もっと
+                    <span class="color-2">
+                        便利
+                    </span>
+                    に
+                    <br>
+                    　　出席簿管理
+                    　　　しませんか？
+                </h1>
+            </div>
+            <div class="content-login">
+                <div class="login-button">
+                    ログイン
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
+    <!-- <div class="main-content">
+        <div class="title-conteiner">
+        </div>
         <img src="./img/title.png" 　title="タイトル">
         <a href="./app/login/index.html"><img src="./img/botton.png" alt="次へ"></a>
         <br>
         <a href="/dev/">debug</a>
-    </div>
+    </div> -->
 </body>
 
 </html>
