--- a/pages/app/mypage/input-n/index.html
+++ b/pages/app/mypage/input-n/index.html
@@ -13,11 +13,9 @@
 <body>
     <div class="main-content">
         <img src="/img/title.png" 　title="タイトル">
-        <br>
-        <a href="./input/index.html"><img src="/img/in.png" alt="出席簿"></a>
-        <div style="width: 100px; height: 10px;"></div>
-        <a href="./aggregate/index.html"><img src="/img/syukei.png" alt="集計"></a>
-        <a href="./list">list</a>
+        <p>出席簿入力</p>
+        <a href="/index.html"><img src="/img/toppage.png" alt="トップページへ"></a>
+        
     </div>
 
 
