--- a/pages/app/mypage/list/index.html
+++ b/pages/app/mypage/list/index.html
@@ -12,10 +12,9 @@
 
 <body>
     class:<select name="input-class" id="input-class"></select>
-    start date:<input type="date" id="start-date">
-    end date:<input type="date" id="end-date">
-    <button id="submit">集計</button>
-    <div id="new-table"></div>
+    date:<input type="date" id="input-date">
+    <button onclick="download();">csv download</button>
+    <div id="new-table">
 
     <!-- <div class="main-content">
         <a href="/index.html"><img src="/img/toppage.png" alt="トップページへ"></a>
